@@ -5,7 +5,6 @@ import lombok.SneakyThrows;
 import lombok.experimental.UtilityClass;
 
 import java.io.IOException;
-import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
@@ -22,24 +21,26 @@ public class Files {
         return java.nio.file.Files.exists(path(file));
     }
 
-    public String read(String file) throws NoSuchFileException {
+    public String read(String file) {
         try {
-            return new String(java.nio.file.Files.readAllBytes(path(file)), UTF_8);
-        } catch (NoSuchFileException e) {
-            throw e;
-        } catch (IOException e) {
+            return java.nio.file.Files.readString(path(file));
+        } catch (Exception e) {
             throw new RecordoError(e);
         }
     }
 
-    public Optional<Path> write(String json, String file) {
+    public Optional<Path> write(String content, String file) {
+        return write(content, file, true);
+    }
+
+    public Optional<Path> write(String content, String file, boolean addNewLine) {
         if (!java.nio.file.Files.exists(USER_DIR)) {
             return Optional.empty();
         }
         final Path path = path(file);
         try {
             java.nio.file.Files.createDirectories(path.getParent());
-            java.nio.file.Files.write(path, (json + '\n').getBytes(UTF_8));
+            java.nio.file.Files.write(path, (content + (addNewLine ? '\n' : "")).getBytes(UTF_8));
         } catch (IOException e) {
             throw new RecordoError(e);
         }
